bindings/c/whiteout_mdx.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_MdxExtent whiteout_MdxExtent;
typedef struct whiteout_MdxModel whiteout_MdxModel;
typedef struct whiteout_MdxSequence whiteout_MdxSequence;
typedef struct whiteout_MdxTexture whiteout_MdxTexture;
typedef struct whiteout_MdxSound whiteout_MdxSound;
typedef struct whiteout_MdxParticleEmitter2 whiteout_MdxParticleEmitter2;
typedef struct whiteout_MdxRibbonEmitter whiteout_MdxRibbonEmitter;
typedef struct whiteout_MdxEventObject whiteout_MdxEventObject;
typedef struct whiteout_MdxCamera whiteout_MdxCamera;
typedef struct whiteout_MdxCollisionShape whiteout_MdxCollisionShape;
typedef struct whiteout_MdxFaceEffect whiteout_MdxFaceEffect;
typedef struct whiteout_MdxCornEmitter whiteout_MdxCornEmitter;
/* Particle emitters v2 */
size_t whiteout_mdx_MdxModel_get_particleEmitters2_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_particleEmitters2(whiteout_MdxModel* self, size_t count);
whiteout_MdxParticleEmitter2* whiteout_mdx_MdxModel_get_particleEmitters2_at(whiteout_MdxModel* self, size_t index);
/* Ribbon trail effects */
size_t whiteout_mdx_MdxModel_get_ribbonEmitters_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_ribbonEmitters(whiteout_MdxModel* self, size_t count);
whiteout_MdxRibbonEmitter* whiteout_mdx_MdxModel_get_ribbonEmitters_at(whiteout_MdxModel* self, size_t index);
/* PopcornFX emitters (Reforged) */
size_t whiteout_mdx_MdxModel_get_cornEmitters_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_cornEmitters(whiteout_MdxModel* self, size_t count);
whiteout_MdxCornEmitter* whiteout_mdx_MdxModel_get_cornEmitters_at(whiteout_MdxModel* self, size_t index);
/* Animation event triggers */
size_t whiteout_mdx_MdxModel_get_eventObjects_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_eventObjects(whiteout_MdxModel* self, size_t count);
whiteout_MdxEventObject* whiteout_mdx_MdxModel_get_eventObjects_at(whiteout_MdxModel* self, size_t index);
/* Camera definitions */
size_t whiteout_mdx_MdxModel_get_cameras_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_cameras(whiteout_MdxModel* self, size_t count);
whiteout_MdxCamera* whiteout_mdx_MdxModel_get_cameras_at(whiteout_MdxModel* self, size_t index);
/* Collision geometry */
size_t whiteout_mdx_MdxModel_get_collisionShapes_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_collisionShapes(whiteout_MdxModel* self, size_t count);
whiteout_MdxCollisionShape* whiteout_mdx_MdxModel_get_collisionShapes_at(whiteout_MdxModel* self, size_t index);
/* Facial effects (Reforged) */
size_t whiteout_mdx_MdxModel_get_faceEffects_count(const whiteout_MdxModel* self);
void whiteout_mdx_MdxModel_resize_faceEffects(whiteout_MdxModel* self, size_t count);
whiteout_MdxFaceEffect* whiteout_mdx_MdxModel_get_faceEffects_at(whiteout_MdxModel* self, size_t index);
/* ── MdxSequence ─────────────────────────────────────────────── */

/* Animation sequence definition */
/*  */
/* Sequences define named animation clips with specific frame ranges. Examples: "Stand", "Walk", "Attack", "Death" */
whiteout_MdxSequence* whiteout_mdx_MdxSequence_new(void);
void whiteout_mdx_MdxSequence_delete(whiteout_MdxSequence* self);
/* Sequence name (e.g., "Stand", "Walk") */
whiteout_CString whiteout_mdx_MdxSequence_get_name(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_name(whiteout_MdxSequence* self, const char* value);
/* Starting frame number */
uint32_t whiteout_mdx_MdxSequence_get_intervalStart(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_intervalStart(whiteout_MdxSequence* self, uint32_t value);
/* Ending frame number (exclusive) */
uint32_t whiteout_mdx_MdxSequence_get_intervalEnd(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_intervalEnd(whiteout_MdxSequence* self, uint32_t value);
/* Movement speed during this animation */
float whiteout_mdx_MdxSequence_get_moveSpeed(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_moveSpeed(whiteout_MdxSequence* self, float value);
/* Playback flags */
int32_t whiteout_mdx_MdxSequence_get_flags(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_flags(whiteout_MdxSequence* self, int32_t value);
/* Rarity factor for variation sequences */
float whiteout_mdx_MdxSequence_get_rarity(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_rarity(whiteout_MdxSequence* self, float value);
/* Sync point for blending */
uint32_t whiteout_mdx_MdxSequence_get_syncPoint(const whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_syncPoint(whiteout_MdxSequence* self, uint32_t value);
/* Bounding volume for this sequence */
whiteout_MdxExtent* whiteout_mdx_MdxSequence_get_extent(whiteout_MdxSequence* self);
void whiteout_mdx_MdxSequence_set_extent(whiteout_MdxSequence* self, const whiteout_MdxExtent* value);
/* ── MdxTexture ─────────────────────────────────────────────── */

/* Texture definition */
/*  */
/* Defines a texture file path and its properties. */
whiteout_MdxTexture* whiteout_mdx_MdxTexture_new(void);
void whiteout_mdx_MdxTexture_delete(whiteout_MdxTexture* self);
uint32_t whiteout_mdx_MdxTexture_get_replaceableId(const whiteout_MdxTexture* self);
void whiteout_mdx_MdxTexture_set_replaceableId(whiteout_MdxTexture* self, uint32_t value);
/* Path to texture file (BLP, DDS or TGA) */
whiteout_CString whiteout_mdx_MdxTexture_get_fileName(const whiteout_MdxTexture* self);
void whiteout_mdx_MdxTexture_set_fileName(whiteout_MdxTexture* self, const char* value);
/* Texture wrap flags */
int32_t whiteout_mdx_MdxTexture_get_flags(const whiteout_MdxTexture* self);
void whiteout_mdx_MdxTexture_set_flags(whiteout_MdxTexture* self, int32_t value);
/* ── MdxSound ─────────────────────────────────────────────── */

/* Sound definition (deprecated, not used in shipped models) */
/*  */
/* Sounds define audio file paths and playback properties. While readers for this chunk exist in the internal game code, no known shipped model contains SNDS data. */
/*  */
/* Binary layout: 56 bytes per entry */
whiteout_MdxSound* whiteout_mdx_MdxSound_new(void);
void whiteout_mdx_MdxSound_delete(whiteout_MdxSound* self);
/* Path to sound file (44 bytes, null-terminated) */
whiteout_CString whiteout_mdx_MdxSound_get_soundFile(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_soundFile(whiteout_MdxSound* self, const char* value);
/* Maximum audible distance */
float whiteout_mdx_MdxSound_get_maximumDistance(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_maximumDistance(whiteout_MdxSound* self, float value);
/* Minimum distance (full volume) */
float whiteout_mdx_MdxSound_get_minimumDistance(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_minimumDistance(whiteout_MdxSound* self, float value);
/* Sound channel identifier */
uint32_t whiteout_mdx_MdxSound_get_soundChannel(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_soundChannel(whiteout_MdxSound* self, uint32_t value);