bindings/java/src/main/java/whiteout/mdx/internal/Native.java

    public static final MethodHandle whiteout_mdx_MdxModel_get_particleEmitters2_count = find("whiteout_mdx_MdxModel_get_particleEmitters2_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_particleEmitters2 = find("whiteout_mdx_MdxModel_resize_particleEmitters2", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_particleEmitters2_at = find("whiteout_mdx_MdxModel_get_particleEmitters2_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_ribbonEmitters_count = find("whiteout_mdx_MdxModel_get_ribbonEmitters_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_ribbonEmitters = find("whiteout_mdx_MdxModel_resize_ribbonEmitters", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_ribbonEmitters_at = find("whiteout_mdx_MdxModel_get_ribbonEmitters_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_cornEmitters_count = find("whiteout_mdx_MdxModel_get_cornEmitters_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_cornEmitters = find("whiteout_mdx_MdxModel_resize_cornEmitters", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_cornEmitters_at = find("whiteout_mdx_MdxModel_get_cornEmitters_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_eventObjects_count = find("whiteout_mdx_MdxModel_get_eventObjects_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_eventObjects = find("whiteout_mdx_MdxModel_resize_eventObjects", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_eventObjects_at = find("whiteout_mdx_MdxModel_get_eventObjects_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_cameras_count = find("whiteout_mdx_MdxModel_get_cameras_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_cameras = find("whiteout_mdx_MdxModel_resize_cameras", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_cameras_at = find("whiteout_mdx_MdxModel_get_cameras_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_collisionShapes_count = find("whiteout_mdx_MdxModel_get_collisionShapes_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_collisionShapes = find("whiteout_mdx_MdxModel_resize_collisionShapes", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_collisionShapes_at = find("whiteout_mdx_MdxModel_get_collisionShapes_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_faceEffects_count = find("whiteout_mdx_MdxModel_get_faceEffects_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxModel_resize_faceEffects = find("whiteout_mdx_MdxModel_resize_faceEffects", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxModel_get_faceEffects_at = find("whiteout_mdx_MdxModel_get_faceEffects_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- MdxSequence --
    public static final MethodHandle whiteout_mdx_MdxSequence_new = find(
        "whiteout_mdx_MdxSequence_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_delete = find(
        "whiteout_mdx_MdxSequence_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_name = find("whiteout_mdx_MdxSequence_get_name", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_name = find("whiteout_mdx_MdxSequence_set_name", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_intervalStart = find("whiteout_mdx_MdxSequence_get_intervalStart", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_intervalStart = find("whiteout_mdx_MdxSequence_set_intervalStart", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_intervalEnd = find("whiteout_mdx_MdxSequence_get_intervalEnd", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_intervalEnd = find("whiteout_mdx_MdxSequence_set_intervalEnd", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_moveSpeed = find("whiteout_mdx_MdxSequence_get_moveSpeed", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_moveSpeed = find("whiteout_mdx_MdxSequence_set_moveSpeed", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_flags = find("whiteout_mdx_MdxSequence_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_flags = find("whiteout_mdx_MdxSequence_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_rarity = find("whiteout_mdx_MdxSequence_get_rarity", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_rarity = find("whiteout_mdx_MdxSequence_set_rarity", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_syncPoint = find("whiteout_mdx_MdxSequence_get_syncPoint", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_syncPoint = find("whiteout_mdx_MdxSequence_set_syncPoint", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxSequence_get_extent = find("whiteout_mdx_MdxSequence_get_extent", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSequence_set_extent = find("whiteout_mdx_MdxSequence_set_extent", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- MdxTexture --
    public static final MethodHandle whiteout_mdx_MdxTexture_new = find(
        "whiteout_mdx_MdxTexture_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTexture_delete = find(
        "whiteout_mdx_MdxTexture_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTexture_get_replaceableId = find("whiteout_mdx_MdxTexture_get_replaceableId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTexture_set_replaceableId = find("whiteout_mdx_MdxTexture_set_replaceableId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxTexture_get_fileName = find("whiteout_mdx_MdxTexture_get_fileName", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTexture_set_fileName = find("whiteout_mdx_MdxTexture_set_fileName", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTexture_get_flags = find("whiteout_mdx_MdxTexture_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxTexture_set_flags = find("whiteout_mdx_MdxTexture_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- MdxSound --
    public static final MethodHandle whiteout_mdx_MdxSound_new = find(
        "whiteout_mdx_MdxSound_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSound_delete = find(
        "whiteout_mdx_MdxSound_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSound_get_soundFile = find("whiteout_mdx_MdxSound_get_soundFile", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSound_set_soundFile = find("whiteout_mdx_MdxSound_set_soundFile", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSound_get_maximumDistance = find("whiteout_mdx_MdxSound_get_maximumDistance", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSound_set_maximumDistance = find("whiteout_mdx_MdxSound_set_maximumDistance", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxSound_get_minimumDistance = find("whiteout_mdx_MdxSound_get_minimumDistance", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSound_set_minimumDistance = find("whiteout_mdx_MdxSound_set_minimumDistance", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxSound_get_soundChannel = find("whiteout_mdx_MdxSound_get_soundChannel", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxSound_set_soundChannel = find("whiteout_mdx_MdxSound_set_soundChannel", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
